<resources>
    <string name="app_name">TeleScope</string>

    <!-- User messages -->
    <string name="no_ble_support">Your device does not support Bluetooth Low Energy feature</string>

    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Layout elements -->
    <string name="add_tag">Add tag</string>
    <string name="locate_tag">Locate tag</string>
    <string name="delete_tag">Delete tag</string>
    <string name="action_exit">Exit</string>
    <string name="available_tags">Available Tags</string>
    <string name="mac_address">MAC Address</string>
    <string name="new_tag_details">New tag details</string>
    <string name="available_groups">Available groups</string>
    <string name="tag_name">Tag Name</string>
    <string name="tag_group">Tag Group</string>
    <string name="add_tag_button">Add Tag</string>
    <string name="add_tag_header">Add tag</string>
    <string name="tag_list_header">Tags list</string>
    <string name="group_list_header">Groups</string>
    <string name="start_scan_button">Start scanning</string>
    <string name="stop_scan_button">Stop scanning</string>
    <string name="select_a_tag">Select a tag from the list</string>
    <string name="enter_name_for_tag">Enter a name for your tag</string>
    <string name="locate_tag_fail">Unable to locate tag</string>
    <string name="select_tag_first">Select a tag first</string>
    <string name="select_group_first">Select a group first</string>
    <string name="tag_buzzing">Your tag is buzzing</string>
    <string name="tag_added_success">Tag has been added successfully</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tag_found">The tag has been located, initiating buzz</string>
    <string name="trying_to_locate_tag">Please wait while the tag is being located</string>
    <string name="tag_out_of_range">The tag has gone out of range</string>
    <string name="duplicate_tag">This tag is already saved</string>
    <string name="unable_to_proceed">Sorry, unable to do this action</string>
    <string name="tag_deleted">The tag has been deleted successfully</string>
    <string name="group_deleted">The selected group has been deleted successfully</string>
    <string name="group_added">New group has been added successfully</string>
</resources>
