<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.pdx.telescope.finalproject.ece558.ece558telescope.TelescopeActivity">
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="600"
        android:title="@string/action_exit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_locate"
        android:icon="@drawable/locate"
        android:orderInCategory="100"
        android:title="@string/locate_tag"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/delete"
        android:orderInCategory="90"
        android:title="@string/delete_tag"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_add_tag"
        android:icon="@drawable/add_tag"
        android:orderInCategory="800"
        android:title="@string/add_tag"
        app:showAsAction="always" />

</menu>
