<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.pdx.telescope.finalproject.ece558.ece558telescope.AddTagFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/scanning_tv"
                android:layout_alignParentStart="true"
                android:layout_alignBottom="@+id/toggleButton"
                android:paddingBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scanning_status"
                android:textAllCaps="true"
                android:textAppearance="@android:style/TextAppearance.Material.Subhead" />
            <ToggleButton
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@id/scanning_tv"
                android:text="ToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toggleButton" />

            <TextView
                android:id="@+id/available_tags"
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/available_tags"
                android:layout_below="@+id/scanning_tv"/>

            <ListView
                android:id="@+id/available_tag_list"
                android:layout_below="@+id/available_tags"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp" />
            <View style="@style/Divider"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/add_tag_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/mac_address"
                android:text="@string/mac_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:padding="@dimen/appbar_padding_top"
                android:layout_marginTop="26dp" />

            <TextView
                android:id="@+id/textView2"
                android:text="@string/tag_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/appbar_padding_top"
                android:layout_below="@+id/mac_address"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="26dp" />

            <TextView
                android:id="@+id/textView3"
                android:text="@string/tag_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:padding="@dimen/appbar_padding_top"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="26dp" />

            <Button
                android:id="@+id/add_tag_button"
                android:text="@string/add_tag_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="26dp"  />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="Name"
                android:ems="10"
                android:layout_alignBottom="@+id/mac_address"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="12dp"
                android:id="@+id/editText" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="Name"
                android:ems="10"
                android:layout_above="@+id/textView3"
                android:layout_alignEnd="@+id/editText"
                android:id="@+id/editText2" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView3"
                android:layout_toEndOf="@+id/textView3"
                android:layout_alignStart="@+id/editText2" />
        </RelativeLayout>

    </LinearLayout>


</FrameLayout>
